# show_repo

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
show_repo/: cli.py  show_repo.py
tests/: test_git_list.py  test_git_parent.py  test_show_repo.py
tests/unit/: test_get_dir_items.py  test_valid_repo.py
