[tool.poetry]
name = "git-parent"
version = "0.1.0"
description = ""
authors = ["Adam Hoffstein <adam.hoffstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
