[tool.poetry]
name = "show-repo"
version = "0.1.1"
description = ""
authors = ["Adam Hoffstein <adam.hoffstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.27"
colorama = "^0.4.5"
tabulate = "^0.8.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sr = "show_repo.cli:cli"